# vega-sdk

vega-sdk/: LICENSE  Makefile  README.md  setup-cdac-board.sh  setup-thejas32.sh  setup-thejas64.sh
vega-sdk/bsp/: Makefile.am  configure.ac  setup.sh
vega-sdk/bsp/common/: config.mk  crt.S  mbl.lds  rawfloat.c  stdlib.c
vega-sdk/bsp/drivers/adc/: adc.c
vega-sdk/bsp/drivers/gpio/: gpio.c  led.c
vega-sdk/bsp/drivers/i2c/: i2c.c
vega-sdk/bsp/drivers/interrupt/: interrupt.c
vega-sdk/bsp/drivers/spi/: spi.c
vega-sdk/bsp/drivers/timer/: timer.c
vega-sdk/bsp/drivers/uart/: debug_uart.c  uart.c
vega-sdk/bsp/include/: adc.h  config.h  debug_uart.h  encoding.h  gpio.h  i2c.h  interrupt.h  led.h  m25p80_eeprom.h  spi.h  stdlib.h  timer.h  uart.h
vega-sdk/examples/adc/adc_demo/: main.c
vega-sdk/examples/adc/adc_sample_pgm/: Makefile  main.c
vega-sdk/examples/gpio/gpio_write_read_pgm/: main.c
vega-sdk/examples/gpio/led_toggle_pgm/: main.c
vega-sdk/examples/gpio/proximity_sensor_pgm/: main.c
vega-sdk/examples/gpio/ultrasound_sensor_pgm/: main.c
vega-sdk/examples/i2c/EEPROM_24aa64/: i2c_EEPROM.c
vega-sdk/examples/i2c/i2c_scanner/: i2c_scanner.c
vega-sdk/examples/spi/spi_write_read_pgm/: Makefile  main.c
vega-sdk/examples/timer/timer_pgm_using_intr_controller/: main.c
vega-sdk/examples/uart/hello_world/: hello.c
vega-sdk/examples/uart/uart_tx_rx/: uart_tx_rx.c
